Micro tab: Improvements for initial crystal creation, with emphasis on making sure it matches the formula ratio
Micro tab: Require one formula unit when creating a new crystal, particularly for CaCl2
Micro tab: Ensure crystals are initialized according to the formula ratio
Micro tab: Added tests for conformance to formula ratio
Micro tab: Ensure crystals dissolve according to the formula ratio
Water tab: Fixed: when dropping a Na+ or Cl- crystal outside the play area it should go back to the play area
Micro tab: Moved the faucet further from the beaker
Water tab: Increased bucket size to accommodate new compound sizes
Water tab: Moved the reset all button below the control panel and colored like other tabs
Micro tab: Removed the exact volume readout from the solution
Micro tab: Changed from "or" to "and" in saturation rules to handle mixed kits that share a solute constituent
# 0.00.96 (55726) Aug 23, 2011
Water tab: Improved collision dynamics particularly for periodic boundary conditions
Water tab: Reduced number of water molecules and zoomed in a bit
Water tab: Improved developer controls
# 0.00.95 (55646) Aug 22, 2011
Water tab: Swapped the location of the water with the controls
Water tab: Made the particles in the bucket a little larger
# 0.00.94 (55642) Aug 22, 2011
Water tab: When the user drags back 2 sugar molecules to the bucket, recrystallize them
Water tab: Add back as many waters as were deleted when the sucrose was added to the model to conserve water molecule count
# 0.00.93 (55605) Aug 22, 2011
Water tab: Added a force to help dissolve salt
Water tab: Added Cl- and Na+ labels on salt ions
# 0.00.92 (55591) Aug 22, 2011
Water tab: Added more water molecules
Water tab: Performance improvements
Water tab: Added a sucrose label to appear on top of each sucrose molecule
Water tab: Fixed: dragging is broken when the sim window is resized
Water tab: Fixed: When grabbing a salt ion, it jumps to a different location right on first drag event